Fix Tweaks Library and apply static OreUI
Rebuild the Tweaks catalog rendering path, apply a consistent static OreUI-inspired component system across every screen, and remove deliberate UI animations.